--- a/index.html
+++ b/index.html
@@ -3,10 +3,12 @@
 
 <head>
   <meta charset="UTF-8" />
-  <!-- <link rel="icon" type="image/svg+xml" href="/vite.svg" /> -->
+  <link rel="icon" type="image/svg+xml" href="/myicon.png" />
+  <link rel="alternate icon" href="/myicon.png">
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta name="theme-color" content="#7C3AED">
   <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
-  <title>Litezy's Portfolio</title>
+  <title>Belziee's Portfolio</title>
 </head>
 
 <body>
